# tradingcodex

./: AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  install.sh  installation.md  pyproject.toml
.github/workflows/: ci.yml  deploy-user-guide.yml  release.yml
apps/harness/: admin.py  models.py
apps/harness/migrations/: 0001_v1_initial.py  0002_workspace_identity_profile.py
apps/mcp/: admin.py  models.py  services.py
apps/mcp/migrations/: 0002_mcpexternalpermissionrequest.py  0002_remove_external_mcp_gate.py
apps/orders/: services.py
apps/policy/: services.py
apps/research/: admin.py  models.py
apps/research/migrations/: 0002_remove_research_db_models.py
docs/: README.md  architecture.md  artifact-supervisor-loop-prd.md  codex-native-orchestration.md  components.md  core-concepts-and-rules.md  data-sources-and-openbb.md  decision-memory.md  deployment.md  execution-without-subagent-plan.md  financial-workflow-references.md  generated-workspaces.md  guardrails.md  harness.md  improvement-loop.md  interfaces-and-surfaces.md  investment-brain-plugins.md  knowledge-wikis.md  product-direction.md  release-readiness.md  research-memory-and-artifacts.md  roles-skills-and-workflows.md  safety-policy-and-execution.md  system-architecture.md  tradingcodex-prd.md  user-facing-skills.md  validation-and-test-plan.md
docs/superpowers/plans/: 2026-07-10-rob-766-approved-only-local-expire.md  2026-07-10-rob-803-broker-read-timeout-and-batch-refresh.md
docs/superpowers/specs/: 2026-07-10-rob-766-approved-only-local-expire-design.md  2026-07-10-rob-803-broker-read-timeout-and-batch-refresh-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ViewerShell.tsx  api.ts  domain.ts  main.tsx  navigation.js  navigation.test.js  styles.css  ui.tsx  viewer-data.js
frontend/src/features/: EpisodesPage.tsx  LibraryPage.tsx  SkillsPage.tsx  SystemPage.tsx  WikiPage.tsx
guidebook/: customize.html  decision-memory.html  dynamic-workflow.html  execution-boundary.html  harness.html  help-status.html  improve.html  index.html  order.html  provider-to-order.html  research.html  reusable-context.html  skill-automate.html  skill-brain.html  skill-build.html  skill-dashboard.html  skill-investor-context.html  skill-memory.html  skill-order-allow.html  skill-order-cancel.html  skill-order-submit.html  skill-plan.html  skill-server.html  skill-strategy.html  skill-wiki.html  skill-workflow.html  skills.html
guidebook/assets/: site.css
openwiki/: .last-update.json  architecture.md  development-and-validation.md  generated-workspaces.md  interfaces-and-data.md  quickstart.md  safety-and-execution.md  workflows-and-agents.md
static/tradingcodex_web/: app.css
tests/: README.md  codex_cli_contract.py  platform_wheel_smoke.py  release_upgrade_smoke.py  test_approval_table_validity.py  test_approval_template_contract.py  test_approval_wait_deadline.py  test_approved_only_expire.py  test_artifact_authentication.py  test_artifact_catalog.py  test_artifact_v2.py  test_brain_skill.py  test_broker_center_prd.py  test_build_contract_metadata.py  test_build_hook.py  test_build_turn_grant.py  test_calculation_runner.py  test_clean_v1_cli_audit.py  test_codex_capabilities.py  test_codex_cli_compat.py  test_codex_cli_contract.py  test_codex_native_orchestration.py  test_dashboard_skill.py  test_datasets.py  test_decision_memory_core.py  test_dev_bootstrap.py  test_dynamic_artifact_quality.py  test_e2e_user_scenarios.py  test_guidebook_contract.py  test_investment_brain_prompt_layers.py  test_investment_brain_provenance.py  test_investment_brain_registry.py  test_investor_context.py  test_knowledge_wikis.py  test_manual_fill_lineage.py  test_mcp_broker_release_health.py  test_native_execution_gateway.py  test_order_turn_grant.py  test_platform_runtime.py  test_python_migration.py  (+13 more)
tests/fixtures/: codex_dummy_mcp.py
tradingcodex_cli/: __main__.py  calculation-runtime-lock.json  calculation-runtime-requirements.txt  calculation_runner.py  codex_trace_audit.py  generator.py  service_autostart.py  startup_status.py  workspace.py
tradingcodex_cli/commands/: bootstrap.py  build.py  connectors.py  db.py  decision.py  doctor.py  mcp.py  mode.py  orders.py  policy.py  profile.py  research.py  skills.py  subagents.py  utils.py  wikis.py  workflow.py  workspaces.py
tradingcodex_service/: api.py  domain.py  mcp_http.py  mcp_runtime.py  settings.py  urls.py  version.py  viewer_api.py  web.py
tradingcodex_service/application/: agents.py  artifact_bindings.py  artifact_catalog.py  artifact_quality.py  artifact_v2.py  audit.py  brokers.py  build_gateway.py  calculations.py  codex_capabilities.py  common.py  components.py  context_budget.py  customization.py  datasets.py  decision_episodes.py  decision_packages.py  execution_gateway.py  forecasting.py  harness.py  investment_brains.py  judgment_postmortems.py  judgments.py  knowledge_wikis.py  managed_package_sources.py  manual_fills.py  operator_authority.py  order_lineage.py  orders.py  policy.py  portfolio.py  postmortems.py  research.py  research_object_catalog.py  research_objects.py  research_specs.py  resting_lifecycle.py  runtime.py  runtime_mode.py  skill_invocations.py  (+7 more)
tradingcodex_service/static/tradingcodex_web/: app.css  app.js  index.html  workbench.css
tradingcodex_service/templates/web/: build_center.html  dashboard.html  harness.html  mcp_router.html  research.html
workspace_templates/modules/codex-base/: module.json
(+121 files in other folders)
