[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingcodex"
dynamic = ["version"]
description = "Local-first investment operating system for Codex-native research and service-gated execution."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "TradingCodex Authors"}
]
keywords = ["trading", "django", "codex", "mcp", "portfolio", "research"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  "django>=5.2,<5.3",
  "django-ninja>=1.4,<2",
  "markdown-it-py>=3,<5",
  "nh3>=0.3,<0.4",
  "packaging>=24",
  "pydantic>=2",
  "pyarrow==25.0.0",
  "PyYAML>=6",
  "whitenoise>=6.12,<7"
]

[project.urls]
Homepage = "https://github.com/monarchjuno/tradingcodex"
Documentation = "https://github.com/monarchjuno/tradingcodex/blob/main/docs/README.md"
Repository = "https://github.com/monarchjuno/tradingcodex.git"
Issues = "https://github.com/monarchjuno/tradingcodex/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
tcx = "tradingcodex_cli.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tradingcodex_service.version.TRADINGCODEX_VERSION"}

[tool.setuptools.packages.find]
include = ["tradingcodex_cli*", "tradingcodex_service*", "apps*", "workspace_templates*"]

[tool.setuptools.package-data]
tradingcodex_cli = ["calculation-runtime-lock.json", "calculation-runtime-requirements.txt"]
tradingcodex_service = ["static/**/*"]
workspace_templates = ["**/*", "**/.*", "**/.*/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
